--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,62 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
-        <title>Cr8tive</title>
-        <meta name="description" content="Marcin Kapica - Portfolio">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="styles/main.css">
-		<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin-ext" rel="stylesheet">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
+	<title>Marcin Kapica</title>
+	<meta name="description" content="Marcin Kapica - Portfolio">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link rel="stylesheet" href="styles/vendor/normalize.min.css">
+	<link rel="stylesheet" href="styles/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin-ext" rel="stylesheet">
+</head>
+<body>
 
-	</head>
-    <body>
-        <script src="scripts/vendor/jquery-1.11.2.min.js"></script>
-		<script src="scripts/vendor/rellax.min.js"></script>
-        <script src="scripts/main.js"></script>
-    </body>
+<!--**************************Navbar**************************-->
+<nav class="navbar">
+	<ul class="menu">
+		<li class="menu__item"><a href="#projects" class="menu__link link">Projekty</a></li>
+		<li class="menu__item"><a href="#about" class="menu__link link">O mnie</a></li>
+		<li class="menu__item"><a href="#contact" class="menu__link link">Kontakt</a></li>
+	</ul>
+</nav>
+
+
+<!--**************************Header**************************-->
+	<header class="header">
+		<div class="header__wrapper rellax" data-rellax-speed="4">
+			<h1 class="header__title heading t2">Marcin Kapica</h1>
+			<h2 class="header__subtitle heading t0">Junior Front-End Developer</h2>
+		</div>
+	</header>
+
+
+<!--**************************Projects**************************-->
+	<section id="projects" class="projects">
+
+	</section>
+
+
+<!--**************************About**************************-->
+	<section id="about" class="about">
+
+	</section>
+
+
+<!--**************************Contact**************************-->
+	<section id="contact" class="contact">
+
+	</section>
+
+
+<!--**************************Footer**************************-->
+	<footer class="footer">
+
+	</footer>
+
+
+	<script src="scripts/vendor/jquery-1.11.2.min.js"></script>
+	<script src="scripts/vendor/rellax.min.js"></script>
+	<script src="scripts/main.js"></script>
+</body>
 </html>
