styled section about

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,14 @@
 
 <!--**************************About**************************-->
 	<section id="about" class="about">
+		<h2 class="heading underline t1">O mnie</h2>
+		<div class="about__wrapper">
+			<img class="about__image" src="images/photo.jpg">
+			<p class="about__text" s1>Pracuję jako Front-End Developer od kilku miesięcy. W pracy wykorzystuję technologie HTML5, CSS3, Javascript/jQuery, Git a także Wordpress.</p>
+			<p class="about__text" s1> Zarówno w pracy jak i w wolnym czasie rozwijam się skupiając się na zdobywaniu przydatnej wiedzy, praktycznych umiejętności i wyrabianiu dobrych praktyk programowania. Szukam zawsze optymalnych rozwiązań dla napotkanych problemów i zwracam uwagę na detale.
+			</p>
+			<p class="about__text" s1> Jestem absolwentem kierunku Automatyka i Robotyka na Politechnice Śląskiej.</p>
+		</div>
 
 	</section>
 
