finished styling website

--- a/app/index.html
+++ b/app/index.html
@@ -38,14 +38,14 @@
 		<h2 class="heading underline t1">Projekty</h2>
 		<div class="projects__wrapper">
 			<div class="projects__box">
-				<a class="projects__link link" href="https://marcinkapica.github.io/cr8tive/app" target="_blank">
+				<a class="link link--box" href="https://marcinkapica.github.io/cr8tive/app" target="_blank">
 					<img class="projects__image" src="images/project_1.jpg">
 					<h3>Cr8tive Digital Agency</h3>
 					<p class="s1">Strona internetowa na podstawie darmowego szablonu .psd</p>
 				</a>
 			</div>
 			<div class="projects__box">
-				<a class="projects__link link" href="http://www.hempyapple.pl" target="_blank">
+				<a class="link link--box" href="http://www.hempyapple.pl" target="_blank">
 					<img class="projects__image" src="images/project_2.jpg">
 					<h3 class="heading">Hempy Drink</h3>
 					<p class="s1">Strona internetowa napojów Hempy Drink</p>
@@ -54,7 +54,7 @@
 		</div>
 		<div class="projects__github">
 			<a class="projects__link link" href="https://github.com/marcinkapica" target="_blank">
-				<img class="projects__image" src="images/github_logo.png">
+				<img class="projects__image" src="images/logo_github.png">
 				<p class="s1">https://github.com/marcinkapica</p>
 			</a>
 		</div>
@@ -78,7 +78,19 @@
 
 <!--**************************Contact**************************-->
 	<section id="contact" class="contact">
-
+		<h2 class="heading underline t1">Kontakt</h2>
+		<div class="contact__wrapper">
+			<div class="contact__box">
+				<img class="projects__image" src="images/logo_envelope.png">
+				<p class="s1">marcinkapica@outlook.com</p>
+			</div>
+			<div class="contact__box">
+				<a class="link link--box" href="https://www.linkedin.com/in/marcin-kapica" target="_blank">
+					<img class="projects__image" src="images/logo_linkedin.png">
+					<p class="s1">https://www.linkedin.com/in/marcin-kapica</p>
+				</a>
+			</div>
+		</div>
 	</section>
 
 
