--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 		<h2 class="heading underline t1">O mnie</h2>
 		<div class="about__wrapper">
 			<img class="about__image" src="images/photo.jpg">
-			<p class="about__text" s1>Pracuję jako Front-End Developer od kilku miesięcy. W pracy wykorzystuję technologie HTML5, CSS3, Javascript/jQuery, Git a także Wordpress.</p>
-			<p class="about__text" s1> Zarówno w pracy jak i w wolnym czasie rozwijam się skupiając się na zdobywaniu przydatnej wiedzy, praktycznych umiejętności i wyrabianiu dobrych praktyk programowania. Szukam zawsze optymalnych rozwiązań dla napotkanych problemów i zwracam uwagę na detale.
+			<p class="about__text" s1>Pracuję jako Front-End Developer od kilku miesięcy. W pracy programuję responsywne strony internetowe w językach HTML5, CSS3 (SASS) oraz Javascript/jQuery. Znam system kontroli wersji Git, system zarządzania treścią WordPress i potrafię używać takich narzędzi jak np. framework Bootstrap.</p>
+			<p class="about__text" s1> Zarówno w pracy jak i w wolnym czasie rozwijam się skupiając się na poszerzaniu wiedzy, zdobywaniu praktycznych umiejętności i poznawaniu dobrych praktyk programowania. Zwracam uwagę na detale i szukam zawsze optymalnych rozwiązań dla napotkanych problemów.
 			</p>
 			<p class="about__text" s1> Jestem absolwentem kierunku Automatyka i Robotyka na Politechnice Śląskiej.</p>
 		</div>
