Updated header text

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 	<header id="header" class="header">
 		<div class="header__wrapper rellax" data-rellax-speed="6">
 			<h1 class="header__title heading underline t2">Marcin Kapica</h1>
-			<p class="header__text t0">Junior Front-End Developer</p>
+			<p class="header__text t0">Front-End Developer</p>
 		</div>
 		<a href="#projects"><span class="header__arrow"></span></a>
 	</header>
