changed language to english, removed empty .scss files

--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,9 @@
 <nav id="navbar" class="navbar js-navbar">
 	<ul class="menu">
 		<li class="menu__item"><a href="#header" class="menu__link link">Start</a></li>
-		<li class="menu__item"><a href="#projects" class="menu__link link">Projekty</a></li>
-		<li class="menu__item"><a href="#about" class="menu__link link">O&nbsp;mnie</a></li>
-		<li class="menu__item"><a href="#contact" class="menu__link link">Kontakt</a></li>
+		<li class="menu__item"><a href="#projects" class="menu__link link">Projects</a></li>
+		<li class="menu__item"><a href="#about" class="menu__link link">About&nbsp;me</a></li>
+		<li class="menu__item"><a href="#contact" class="menu__link link">Contact</a></li>
 	</ul>
 </nav>
 
@@ -35,20 +35,20 @@
 
 <!--**************************Projects**************************-->
 	<section id="projects" class="projects">
-		<h2 class="heading underline t1">Projekty</h2>
+		<h2 class="heading underline t1">Projects</h2>
 		<div class="projects__wrapper">
 			<div class="projects__box">
 				<a class="link link--box" href="https://marcinkapica.github.io/cr8tive/app" target="_blank">
 					<img class="projects__image" src="images/project_1.jpg">
 					<h3>Cr8tive Digital Agency</h3>
-					<p class="s1">Strona internetowa na podstawie darmowego szablonu .psd</p>
+					<p class="s1">Website programmed basing on free PSD layout</p>
 				</a>
 			</div>
 			<div class="projects__box">
 				<a class="link link--box" href="http://www.hempyapple.pl" target="_blank">
 					<img class="projects__image" src="images/project_2.jpg">
 					<h3 class="heading">Hempy Drink</h3>
-					<p class="s1">Strona internetowa napojów Hempy Drink</p>
+					<p class="s1">Website of Hempy Drink products</p>
 				</a>
 			</div>
 		</div>
@@ -64,13 +64,11 @@
 
 <!--**************************About**************************-->
 	<section id="about" class="about">
-		<h2 class="heading underline t1">O mnie</h2>
+		<h2 class="heading underline t1">About me</h2>
 		<div class="about__wrapper">
 			<img class="about__image" src="images/photo.jpg">
-			<p class="about__text" s1>Pracuję jako Front-End Developer od kilku miesięcy. W pracy wykorzystuję technologie HTML5, CSS3, Javascript/jQuery, Git a także Wordpress.</p>
-			<p class="about__text" s1> Zarówno w pracy jak i w wolnym czasie rozwijam się skupiając się na zdobywaniu przydatnej wiedzy, praktycznych umiejętności i wyrabianiu dobrych praktyk programowania. Szukam zawsze optymalnych rozwiązań dla napotkanych problemów i zwracam uwagę na detale.
-			</p>
-			<p class="about__text" s1> Jestem absolwentem kierunku Automatyka i Robotyka na Politechnice Śląskiej.</p>
+            <p class="about__text" s1>I have been working as a front-end developer for a several months now. I code responsive websites and web applications using HTML5, CSS3 (SCSS), Javascript/jQuery and Wordpress+PHP technologies. I am a BEM methodology enthusiast, I know Bootstrap framework, and have also a good knowledge of Adobe Photoshop program. I work with Git version control system.</p>
+            <p class="about__text" s1>Both at work and in my free time I am broadening my knowledge and learning new practical skills. I am detail-oriented and I always search for the optimal solutions for encountered problems.</p>
 		</div>
 
 	</section>
@@ -78,14 +76,14 @@
 
 <!--**************************Contact**************************-->
 	<section id="contact" class="contact">
-		<h2 class="heading underline t1">Kontakt</h2>
+		<h2 class="heading underline t1">Contact</h2>
 		<div class="contact__wrapper">
 			<div class="contact__box">
 				<img class="projects__image" src="images/logo_envelope.png">
 				<p class="s1">marcinkapica@outlook.com</p>
 			</div>
 			<div class="contact__box">
-				<a class="link link--box" href="https://www.linkedin.com/in/marcin-kapica" target="_blank">
+				<a class="link" href="https://www.linkedin.com/in/marcin-kapica" target="_blank">
 					<img class="projects__image" src="images/logo_linkedin.png">
 					<p class="s1">https://www.linkedin.com/in/marcin-kapica</p>
 				</a>
@@ -96,7 +94,7 @@
 
 <!--**************************Footer**************************-->
 	<footer class="footer">
-
+        <small>&copy; 2017 Marcin Kapica</small>
 	</footer>
 
 
