changed text on 'projects' section

--- a/index.html
+++ b/index.html
@@ -36,19 +36,20 @@
 <!--**************************Projects**************************-->
 	<section id="projects" class="projects">
 		<h2 class="heading underline t1">Projects</h2>
+        <p class="s1">Some of the projects which I coded</p>
 		<div class="projects__wrapper">
 			<div class="projects__box">
 				<a class="link link--box" href="https://marcinkapica.github.io/cr8tive/app" target="_blank">
 					<img class="projects__image" src="images/project_1.jpg">
 					<h3>Cr8tive Digital Agency</h3>
-					<p class="s1">Website programmed basing on free PSD layout</p>
+					<p class="s1">Website coded basing on free PSD layout</p>
 				</a>
 			</div>
 			<div class="projects__box">
 				<a class="link link--box" href="http://www.hempyapple.pl" target="_blank">
 					<img class="projects__image" src="images/project_2.jpg">
 					<h3 class="heading">Hempy Drink</h3>
-					<p class="s1">Website of Hempy Drink products</p>
+					<p class="s1">Website of the Hempy Drink products</p>
 				</a>
 			</div>
 		</div>
