corrected text in 'about me' section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<h2 class="heading underline t1">About me</h2>
 		<div class="about__wrapper">
 			<img class="about__image" src="images/photo.jpg">
-            <p class="about__text" s1>I have been working as a front-end developer for a several months now. I code responsive websites and web applications using HTML5, CSS3 (SCSS), Javascript/jQuery and Wordpress+PHP technologies. I am a BEM methodology enthusiast, I know Bootstrap framework, and have also a good knowledge of Adobe Photoshop program. I work with Git version control system.</p>
+            <p class="about__text" s1>I have been working as a front-end developer for a several months now. I code responsive websites and web applications using HTML5, CSS3 (SCSS), Javascript/jQuery and WordPress+PHP technologies. I am a BEM methodology enthusiast, I know Bootstrap framework, and have also a good knowledge of Adobe Photoshop program. I work with Git version control system.</p>
             <p class="about__text" s1>Both at work and in my free time I am broadening my knowledge and learning new practical skills. I am detail-oriented and I always search for the optimal solutions for encountered problems.</p>
 		</div>
 
