added load articles project

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Marcin Kapica - Portfolio">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="styles/vendor/normalize.min.css">
-	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/main.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
@@ -45,8 +45,15 @@
 				</a>
 			</div>
 			<div class="projects__box">
-				<a class="link link--box" href="http://www.hempyapple.pl" target="_blank">
+				<a class="link link--box" href="https://dist-snhuuamfiv.now.sh/" target="_blank">
 					<img class="projects__image" src="images/project_2.jpg">
+					<h3 class="heading">Load articles using API</h3>
+					<p class="s1">Small web application which loads and displays the list of latest articles from National Geographic website using NewsAPI</p>
+				</a>
+			</div>
+			<div class="projects__box">
+				<a class="link link--box" href="http://www.hempyapple.pl" target="_blank">
+					<img class="projects__image" src="images/project_3.jpg">
 					<h3 class="heading">Hempy Drink</h3>
 					<p class="s1">Website of Hempy Drink products</p>
 				</a>
