adding load articles app project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Marcin Kapica - Portfolio">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="styles/vendor/normalize.min.css">
-	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="styles/main.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 <body>
@@ -36,20 +36,26 @@
 <!--**************************Projects**************************-->
 	<section id="projects" class="projects">
 		<h2 class="heading underline t1">Projects</h2>
-        <p class="s2">Some of the projects which I coded</p>
 		<div class="projects__wrapper">
 			<div class="projects__box">
 				<a class="link link--box" href="https://marcinkapica.github.io/cr8tive/app" target="_blank">
 					<img class="projects__image" src="images/project_1.jpg">
 					<h3>Cr8tive Digital Agency</h3>
-					<p class="s1">Website coded basing on free PSD layout</p>
+					<p class="s1">Website programmed basing on free PSD layout</p>
+				</a>
+			</div>
+			<div class="projects__box">
+				<a class="link link--box" href="https://dist-snhuuamfiv.now.sh/" target="_blank">
+					<img class="projects__image" src="images/project_2.jpg">
+					<h3 class="heading">Load articles using API</h3>
+					<p class="s1">Small web application which loads and displays the list of latest articles from National Geographic website using NewsAPI</p>
 				</a>
 			</div>
 			<div class="projects__box">
 				<a class="link link--box" href="http://www.hempyapple.pl" target="_blank">
-					<img class="projects__image" src="images/project_2.jpg">
+					<img class="projects__image" src="images/project_3.jpg">
 					<h3 class="heading">Hempy Drink</h3>
-					<p class="s1">Website of the Hempy Drink products</p>
+					<p class="s1">Website of Hempy Drink products</p>
 				</a>
 			</div>
 		</div>
@@ -68,7 +74,7 @@
 		<h2 class="heading underline t1">About me</h2>
 		<div class="about__wrapper">
 			<img class="about__image" src="images/photo.jpg">
-            <p class="about__text" s1>I have been working as a front-end developer for a several months now. I code responsive websites and web applications using HTML5, CSS3 (SCSS), Javascript/jQuery and WordPress+PHP technologies. I am a BEM methodology enthusiast, I know Bootstrap framework, and have also a good knowledge of Adobe Photoshop program. I work with Git version control system.</p>
+            <p class="about__text" s1>I have been working as a front-end developer for a several months now. I code responsive websites and web applications using HTML5, CSS3 (SCSS), Javascript/jQuery and Wordpress+PHP technologies. I am a BEM methodology enthusiast, I know Bootstrap framework, and have also a good knowledge of Adobe Photoshop program. I work with Git version control system.</p>
             <p class="about__text" s1>Both at work and in my free time I am broadening my knowledge and learning new practical skills. I am detail-oriented and I always search for the optimal solutions for encountered problems.</p>
 		</div>
 
