updating link to cr8tive website

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<h2 class="heading underline t1">Projects</h2>
 		<div class="projects__wrapper">
 			<div class="projects__box">
-				<a class="link link--box" href="https://marcinkapica.github.io/cr8tive/app" target="_blank">
+				<a class="link link--box" href="https://marcinkapica.github.io/cr8tive-website/" target="_blank">
 					<img class="projects__image" src="images/project_1.jpg">
 					<h3>Cr8tive Digital Agency</h3>
 					<p class="s1">Website programmed basing on free PSD layout</p>
